    * don't steal Ctrl+B/U/I shortcuts from page
    * disabled by default opacity effect on tab previews - see BUILDING
    * improved showing navigation toolbar in fullscreen
    * moved config directory into ~/.config/qupzilla
    * certificates bundle is now only used on windows
    * reduced memory usage of AdBlock (saves up to 30MB with just EasyList)
    * GreaseMonkey: reload script if source file changed on disk
    * GreaseMonkey: fixed don't loading invalid scripts
    * fixed opening browser with url with ampersand (%26) as command line argument
    * fixed scrolling to anchor in background tabs
    * fixed parsing UTF-8 filenames in Content-Disposition header
    * fixed crash with context menu in websearchbar and locationbar
    * fixed loading NYTimes skimmer page
    * fixed cookie domain handling according to RFC 6265
    * fixed qvalue format in Accept-Language HTTP header
    * fixed sorting files case insensitively in file scheme handler
    * fixed possible crash in saving page screen of a really long page
    * fixed showing window in fullscreen with XFCE
    * X11: fixed Ctrl+Q shortcut for DEs other than KDE and Gnome
    * windows: fixed color of found text when searching on page
    * windows: fixed navigating to file links and x: labels in file: scheme handler
    * windows: fixed downloading utf-8 encoded adblock subscriptions
    * windows: improved installer allows registering as default web browser
    * windows: check and set as default browser from preferences
    * mac: fixed not working global menu after closing browser window

Version 1.3.5
    * released 16 September 2012
    * new Persian translation
    * option to remove web search bar
    * warning user when removing page from speed dial
    * option to align pages to center in speed dial
    * added shortcut for Clear private data
    * new options in AdBlock menu to disable it for domain and for single page
    * added option to disable search suggestions in search bar